feat(html): Align FAQ and Credits titles on left

--- a/faq/index.html
+++ b/faq/index.html
@@ -232,7 +232,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<a href="https://www.youtube.com/watch?v=H3CoI84s_FI" class="underline">YouTube Video Guide</a>
 						<p><br /></p>
 						<p>Note: some options in PlayCover might differ from the video due to different versions being used however, the major steps remain the same.</p>
@@ -252,7 +252,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p class="pl-3 mb-10 border-l-4 rounded-sm border-text-purple ">Last updated for version 0.7.0</p>
 
 						<ul class="list-inside list-disc">
@@ -319,7 +319,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>The supporter version is a build that is pushed to supporters before releasing to the general public. It generally has newer and more features, but is more buggy. Check #how-to-donate channel in our <a href="https://discord.com/invite/FYVuF6CNzP" class="underline">discord server</a> for more info.</p>
 					</div>
 				</div>
@@ -337,7 +337,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>We may not be able to provide an ETA on the next release, but rest assured that we are working hard to develop the app and release new features!</p>
 					</div>
 				</div>
@@ -355,7 +355,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Currently, yes. But disabling SIP will not be required in future releases. It is also very safe, especially on M1 Macs.</p>
 					</div>
 				</div>
@@ -373,7 +373,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Press <kbd>option</kbd> key on your keyboard while playing to enable the cursor, then click top left icon (next to map) and click setting. There you can change all settings.</p>
 					</div>
 				</div>
@@ -391,7 +391,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>To add mouse clicks, select a button and press 'Shift + L or R' (the actual L or R keys on keyboard, not the mouse buttons).</p>
 					</div>
 				</div>
@@ -409,7 +409,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<ul class="list-outside list-disc">
 							<li>Press CTRL + M in keymapper and place it in the middle.</li>
 							<li>Try disconnecting and reconnecting your mouse if an external one.</li>
@@ -430,7 +430,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Please check if you moved the game to Applications folder after install. If yes, delete it and reinstall. Let it remain in the documents folder.</p>
 					</div>
 				</div>
@@ -448,7 +448,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>You will need to install XCode from the app store.</p>
 					</div>
 				</div>
@@ -466,7 +466,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Yes, in order to apply latest changes to the app you need to install the .ipa again, however you won’t need to download any game data, since that is just going to replace the old patched version.</p>
 					</div>
 				</div>
@@ -484,7 +484,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>By running the following command:</p>
 						<br />
 						<div class="inline-block max-w-[100%] overflow-auto bg-gray-700 dark:bg-gray-800 transition duration-200 ease-in-out my-3 p-3 rounded"><code class="text-yellow-400">sudo nvram boot-args=""</code></div>
@@ -504,7 +504,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>That's called verbose mode, it displays what's going on inside the system. It was enabled by the following command:</p>
 						<div class="inline-block max-w-[100%] overflow-auto bg-gray-700 dark:bg-gray-800 transition duration-200 ease-in-out my-3 p-3 rounded"><code class="text-yellow-400">sudo nvram boot-args...</code></div>
 						<br />You can disable the texts by running the following commands in order:
@@ -527,7 +527,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>This is normal. *nix systems blank out the password while you’re typing it. This is a form of security and it’s completely expected. Just type your password normally and press enter once you’re done.</p>
 					</div>
 				</div>
@@ -545,7 +545,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Intel machines are currently not supported on Playcover. However, the devs are trying to make this happen so stay tuned.</p>
 					</div>
 				</div>
@@ -563,7 +563,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<ol class="list-decimal">
 							<li>Make sure you have disabled SIP.</li>
 							<li>
@@ -597,7 +597,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>
 							You could either: <br />
 							<br />
