--- a/lang/cn/faq/index.html
+++ b/lang/cn/faq/index.html
@@ -233,7 +233,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<a href="https://www.youtube.com/watch?v=H3CoI84s_FI" class="underline">YouTube视频指南 </a>
 						<p><br /></p>
 						<p>注意：由于使用的版本不同，PlayCover中的一些选项可能与视频中的不同，但是，主要步骤仍然相同。</p>
@@ -253,7 +253,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p class="pl-3 mb-10 border-l-4 rounded-sm border-text-purple ">最后更新的版本 0.7.3</p>
 
 						<ul class="list-inside list-disc">
@@ -320,7 +320,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>捐赠版本是在向公众发布之前向捐赠过的我们项目的人推送的版本。它通常有更新和更多的功能，但有更多的bug。请查看我们的 <a href="https://discord.com/invite/FYVuF6CNzP" class="underline">discord</a> 服务器中的#how-to-donate频道，了解更多信息。</p>
 					</div>
 				</div>
@@ -338,7 +338,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>我们无法确定下一个版本更新还需要多少时间，但请放心，我们正在努力开发应用和发布新的功能</p>
 					</div>
 				</div>
@@ -356,7 +356,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>目前来说是的。但是在未来的版本中，禁用SIP将不需要。它也是非常安全的，特别是在M1 Mac上。</p>
 					</div>
 				</div>
@@ -374,7 +374,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>按键盘上的Option键启用光标，然后点击左上角的图标（在地图旁边），点击设置。在那里你可以改变所有的设置。</p>
 					</div>
 				</div>
@@ -392,7 +392,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>要添加鼠标点击映射，选择一个按钮并按「Shift + L或R」（键盘上实际的L或R键，而不是鼠标按钮）。</p>
 					</div>
 				</div>
@@ -410,7 +410,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<ul class="list-outside list-disc">
 							<li>在键盘上按CTRL + M，并把它放在中间。</li>
 							<li>如果是外置鼠标，试着断开并重新连接。</li>
@@ -431,7 +431,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>请检查你是否在安装后将游戏移动至应用程序文件夹。如果是，请删除它并重新安装并且保留它在文档文件夹中。</p>
 					</div>
 				</div>
@@ -449,7 +449,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>你需要从应用商店安装XCode。</p>
 					</div>
 				</div>
@@ -467,7 +467,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>是的，为了应用应用程序的新功能，您需要再次安装ipa，但是您不需要下载任何游戏数据，因为只是要升级旧版本。</p>
 					</div>
 				</div>
@@ -485,7 +485,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>通过运行以下命令。</p>
 						<br />
 						<div class="inline-block max-w-[100%] overflow-auto bg-gray-700 dark:bg-gray-800 transition duration-200 ease-in-out my-3 p-3 rounded"><code class="text-yellow-400">sudo nvram boot-args=""</code></div>
@@ -505,7 +505,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>这叫做verbose模式，它显示系统内部发生的事情，它是由以下命令启用的。</p>
 						<div class="inline-block max-w-[100%] overflow-auto bg-gray-700 dark:bg-gray-800 transition duration-200 ease-in-out my-3 p-3 rounded"><code class="text-yellow-400">sudo nvram boot-args...</code></div>
 						<br />你可以通过依次运行以下命令来禁用这些文本。
@@ -529,7 +529,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>这很正常。类unix系统在你输入密码的时候会把密码清空。这是一种安全形式，完全可以预期。只要正常输入密码，完成后按回车即可。</p>
 					</div>
 				</div>
@@ -547,7 +547,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Intel机器目前不支持Playcover。不过，开发人员正在努力实现这一目标，请继续关注。</p>
 					</div>
 				</div>
@@ -565,7 +565,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<ol class="list-decimal">
 							<li>请确认你已经禁用了SIP。</li>
 							<li>
@@ -601,7 +601,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>
 							你可以选择
 							<br />
