--- a/lang/de/faq/index.html
+++ b/lang/de/faq/index.html
@@ -235,7 +235,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<a href="https://www.youtube.com/watch?v=H3CoI84s_FI" class="underline">YouTube-Videoanleitung</a>
 						<p><br /></p>
 						<p>Hinweis: Einige Optionen in PlayCover können aufgrund unterschiedlicher Versionen vom Video abweichen, die Hauptschritte bleiben jedoch gleich.</p>
@@ -255,7 +255,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p class="pl-3 mb-10 border-l-4 rounded-sm border-text-purple ">Zuletzt aktualisiert für Version 0.7.3</p>
 
 						<ul class="list-inside list-disc">
@@ -322,7 +322,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Die Supporter-Version ist ein Build, der an die Unterstützer weitergegeben wird, bevor er für die breite Öffentlichkeit freigegeben wird. Es hat im Allgemeinen neuere und mehr Funktionen, ist aber fehlerhafter. Überprüfen Sie den #how-to-donate-kanal in unserem <a href="https://discord.com/invite/FYVuF6CNzP" class="underline">discord server</a> für mehr Informationen.</p>
 					</div>
 				</div>
@@ -340,7 +340,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Wir können leider keine ETA für die nächste Version bereitstellen, aber Du kannst Dir sicher sein, dass wir hart daran arbeiten, die App zu entwickeln und neue Funktionen zu veröffentlichen!</p>
 					</div>
 				</div>
@@ -358,7 +358,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Derzeit ja. Das Deaktivieren von SIP wird jedoch in zukünftigen Versionen nicht erforderlich sein. Es ist zudem sehr sicher, insbesondere auf M1-Macs.</p>
 					</div>
 				</div>
@@ -376,7 +376,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Drücke während des Spielens die Optionstaste auf Deiner Tastatur, um den Cursor zu aktivieren, klicke dann auf das Symbol oben links (neben der Karte) und klicke dann auf die Einstellungen. Dort kannst Du alle Einstellungen ändern.</p>
 					</div>
 				</div>
@@ -394,7 +394,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Um Mausklicks hinzuzufügen, wähle eine Schaltfläche aus und drücke ‘Umschalttaste + L oder R' (die tatsächlichen L- oder R-Tasten auf der Tastatur, nicht die Maustasten).</p>
 					</div>
 				</div>
@@ -412,7 +412,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<ul class="list-outside list-disc">
 							<li>Drück STRG + M in der Tastenbelegung und platziere es in der Mitte.</li>
 							<li>Versuchen, Deine Maus zu trennen und wieder anzuschließen, wenn es sich um eine externe Maus handelt.</li>
@@ -433,7 +433,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Bitte überprüfe, ob Du das Spiel nach der Installation in den Anwendungsordner verschoben hast. Wenn ja, löschen und neu installieren. Lasse es im Dokumentenordner verbleiben.</p>
 					</div>
 				</div>
@@ -451,7 +451,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Du musst XCode aus dem App Store installieren.</p>
 					</div>
 				</div>
@@ -469,7 +469,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Ja, um die neuesten Änderungen an der App zu übernehmen, musst Du die .ipa erneut installieren. Du musst jedoch keine Spieldaten herunterladen, da dies nur die alte Version ersetzt.</p>
 					</div>
 				</div>
@@ -487,7 +487,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Durch Ausführen des folgenden Befehls:</p>
 						<br />
 						<div class="inline-block max-w-[100%] overflow-auto bg-gray-700 dark:bg-gray-800 transition duration-200 ease-in-out my-3 p-3 rounded"><code class="text-yellow-400">sudo nvram boot-args=""</code></div>
@@ -507,7 +507,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Das nennt man ausführlichen Modus, er zeigt an, was im System vor sich geht. Es wurde durch den folgenden Befehl aktiviert:</p>
 						<div class="inline-block max-w-[100%] overflow-auto bg-gray-700 dark:bg-gray-800 transition duration-200 ease-in-out my-3 p-3 rounded"><code class="text-yellow-400">sudo nvram boot-args...</code></div>
 						<br />Du kannst die Texte deaktivieren, indem Du die folgenden Befehle der Reihe nach ausführst:
@@ -530,7 +530,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Das ist ganz normal. * nix systems blendet das Passwort aus, während Du es eingibst. Dies ist eine Form der Sicherheit und wird vollständig erwartet. Gebe einfach Dein Passwort normal ein und drücke die Eingabetaste, wenn Du fertig bist.</p>
 					</div>
 				</div>
@@ -548,7 +548,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Intel-Maschinen werden derzeit von PlayCover nicht unterstützt. Die Entwickler versuchen jedoch, dies zu ermöglichen, also bleib dran.</p>
 					</div>
 				</div>
@@ -566,7 +566,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<ol class="list-decimal">
 							<li>Stelle sicher, dass Du SIP deaktiviert hast.</li>
 							<li>
@@ -600,7 +600,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>
 							Du kannst entweder:<br />
 							<br />
