--- a/lang/es/faq/index.html
+++ b/lang/es/faq/index.html
@@ -234,7 +234,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<a href="https://www.youtube.com/watch?v=H3CoI84s_FI" class="underline">Video guía en YouTube</a>
 						<p><br /></p>
 						<p>Nota: algunas opciones de PlayCover pueden ser diferentes a las del video debido a la diferencia entre versiones, sin embargo, los pasos importantes siguen siendo los mismos.</p>
@@ -254,7 +254,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p class="pl-3 mb-10 border-l-4 rounded-sm border-text-purple ">Ultima versión 0.7.0</p>
 
 						<ul class="list-inside list-disc">
@@ -321,7 +321,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>La versión para contribuidores es una versión que es publicada para estos antes del lanzamiento publico. Generalmente incluye mas y nuevas características, pero con mayores errores. Lee el canal #how-to-donate en nuestro servidor de discord para mas informacion.</p>
 					</div>
 				</div>
@@ -339,7 +339,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>No podemos dar una fecha aproximada para la siguiente versión ¡pero podemos asegurar que trabajamos duro para desarrollar la app y nuevas características!</p>
 					</div>
 				</div>
@@ -357,7 +357,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Actualmente, si. Pero no será necesario en futuras versiones, también es bastante seguro, especialmente en dispositivos M1.</p>
 					</div>
 				</div>
@@ -375,7 +375,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Presiona la tecla opción en tu teclado mientras juegas para habilitar el cursor, luego presiona el icono en la esquina superior izquierda (al lado del mapa) y presiona en configuración. Ahí puedes cambiar la configuración.</p>
 					</div>
 				</div>
@@ -393,7 +393,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Para asignar los clicks del ratón, selecciona un botón y presiona 'Shift + L or R' (Actualmente las teclas L y R en el teclado no asignan los clicks del ratón).</p>
 					</div>
 				</div>
@@ -411,7 +411,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<ul class="list-outside list-disc">
 							<li>Presiona CTRL + M en el modo de mapeo de teclado y colócalo en el medio de la ventana.</li>
 							<li>Si utilizas un ratón externo desconecta y reconéctalo.</li>
@@ -432,7 +432,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Por favor mira, si moviste el juego a la carpeta de aplicaciones después de instalar. En caso de ser así bórralo y reinstala, necesita estar en la carpeta dentro de documentos para funcionar.</p>
 					</div>
 				</div>
@@ -450,7 +450,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>En caso de ser esto error. Necesitas instalar Xcode de la appstore</p>
 					</div>
 				</div>
@@ -468,7 +468,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Si, para aplicar los nuevos cambios hechos a la aplicación necesitas reinstalar el .ipa, sin embargo no necesitas volver a descargar los datos de juego, ya que esto solo remplazara la versión parchada.</p>
 					</div>
 				</div>
@@ -486,7 +486,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Necesitas utilizar el siguiente comando:</p>
 						<br />
 						<div class="inline-block max-w-[100%] overflow-auto bg-gray-700 dark:bg-gray-800 transition duration-200 ease-in-out my-3 p-3 rounded"><code class="text-yellow-400">sudo nvram boot-args=""</code></div>
@@ -506,7 +506,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Eso es llamado inicio en modo Verboso, este muestra lo que esta ocurriendo en el sistema al momento, fue activado con este comando:</p>
 						<div class="inline-block max-w-[100%] overflow-auto bg-gray-700 dark:bg-gray-800 transition duration-200 ease-in-out my-3 p-3 rounded"><code class="text-yellow-400">sudo nvram boot-args...</code></div>
 						<br />Puedes deshabilitar esté modo utilizando estos comandos:
@@ -529,7 +529,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Esto es normal. Los sistemas *nix ocultan la contraseña mientras es escrita. Esta es una forma de seguridad y es completamente normal, solo escribe tu contraseña normalmente y presiona entrar una vez termines.</p>
 					</div>
 				</div>
@@ -547,7 +547,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Los dispositivos Intel actualmente no soportan PlayCover. Sin embargo, los desarrolladores están trabajando en esto, por favor espere un poco mas.</p>
 					</div>
 				</div>
@@ -565,7 +565,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<ol class="list-decimal">
 							<li>Asegurate de que tienes SIP desabilitado</li>
 							<li>
@@ -599,7 +599,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>
 							Para solucionarlo puedes: <br />
 							<br />
