--- a/lang/id/faq/index.html
+++ b/lang/id/faq/index.html
@@ -233,7 +233,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<a href="https://www.youtube.com/watch?v=H3CoI84s_FI" class="underline">Youtube Video Guide</a>
 						<p><br /></p>
 						<p>Catatan: beberapa opsi di PlayCover mungkin berbeda karena perbedaan versi yang digunakan, tapi langkah-langkah utama masih sama</p>
@@ -253,7 +253,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p class="pl-3 mb-10 border-l-4 rounded-sm border-text-purple ">Terakhir diupdate untuk versi 0.7.0</p>
 
 						<ul class="list-inside list-disc">
@@ -320,7 +320,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Versi supporter adalah versi yang diberikan ke supporter sebelum dirilis ke pengguna umum. Versi ini memiliki fitur-fitur baru, tapi memiliki bug lebih banyak. Cek channel #how-to-donate di server discord kita untuk informasi lebih lanjut.</p>
 					</div>
 				</div>
@@ -338,7 +338,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Kita mungkin tidak bisa memberikan tanggal tepat untuk rilis selanjutnya, tapi jangan khawatir karena kita bekerja keras untuk mengembangkan app dan merilis fitur baru!</p>
 					</div>
 				</div>
@@ -356,7 +356,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Sementara, iya. Tapi disable SIP tidak akan diperlukan pada rilis yang akan mendatang. Itu juga aman, terutama di Mac M1.</p>
 					</div>
 				</div>
@@ -374,7 +374,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Di dalam game, tekan tombol Option di keyboard untuk menampilkan cursor. Lalu tekan icon di kiri atas (sebelah map) dan klik settings. Disana semua pengaturan bisa diubah.</p>
 					</div>
 				</div>
@@ -392,7 +392,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Untuk menambahkan mouse click, pilih tombol dan tekan 'Shift + L atau R' (tombol L dan R di keyboard, bukan di mouse).</p>
 					</div>
 				</div>
@@ -410,7 +410,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<ul class="list-outside list-disc">
 							<li>Tekan CTRL + M di keymapper lalu tempatkan di tengah.</li>
 							<li>Jika menggunakan mouse external, coba cabut dan pasang mouse.</li>
@@ -431,7 +431,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Cek apabila game dipindah ke folder Applications setelah di install. Jika iya, hapus dan reinstall. Biarkan game berada di folder Documents.</p>
 					</div>
 				</div>
@@ -449,7 +449,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>XCode harus di install dari App Store.</p>
 					</div>
 				</div>
@@ -467,7 +467,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Iya, untuk menerapkan perubahan terbaru .ipa harus di install ulang. Tapi, Game Data tidak perlu di download, karena itu hanya akan menggantikan versi lama yang di patch.</p>
 					</div>
 				</div>
@@ -485,7 +485,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Dengan menjalankan command berikut:</p>
 						<br />
 						<div class="inline-block max-w-[100%] overflow-auto bg-gray-700 dark:bg-gray-800 transition duration-200 ease-in-out my-3 p-3 rounded"><code class="text-yellow-400">sudo nvram boot-args=""</code></div>
@@ -505,7 +505,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Namanya mode verbose, teks menunjukkan apa yang sedang dilakukan sistem. Verbose mode diaktifkan dengan command berikut:</p>
 						<div class="inline-block max-w-[100%] overflow-auto bg-gray-700 dark:bg-gray-800 transition duration-200 ease-in-out my-3 p-3 rounded"><code class="text-yellow-400">sudo nvram boot-args...</code></div>
 						<br />Teks bisa di disable dengan menjalankan command berikut secara urut:
@@ -528,7 +528,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Ini normal. Sistem nix memang mengosongkan password saat diketik. Ini hanya bentuk keamanan dan memang sengaja. Ketik password seperti biasanya dan tekan enter jika sudah. </p>
 					</div>
 				</div>
@@ -546,7 +546,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Perangkat Intel sementara tidak didukung oleh PlayCover. Pantau terus karena developer sedang bekerja untuk mendukung perangkat Intel</p>
 					</div>
 				</div>
@@ -564,7 +564,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<ol class="list-decimal">
 							<li>Pastikan SIP sudah disabled</li>
 							<li>
@@ -598,7 +598,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>
 							Coba: <br />
 							<br />
