--- a/lang/ru/faq/index.html
+++ b/lang/ru/faq/index.html
@@ -235,7 +235,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<a href="https://www.youtube.com/watch?v=H3CoI84s_FI" class="underline">Видео инструкция на YouTube</a>
 						<p><br /></p>
 						<p>Внимание: некоторые опции в PlayCover могут отличаться от тех, что в видео, ввиду использования разных версий; тем не менее, основные шаги остаются теми же.</p>
@@ -255,7 +255,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p class="pl-3 mb-10 border-l-4 rounded-sm border-text-purple ">Последнее обновление для версии 0.7.3</p>
 
 						<ul class="list-inside list-disc">
@@ -322,7 +322,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Версия для сторонников - это сборка, которая передается сторонникам перед выпуском для широкой публики. Обычно он имеет более новые и новые функции, но в нем больше ошибок. Проверьте #how-to-donate канал в нашем <a href="https://discord.com/invite/FYVuF6CNzP" class="underline">discord server</a> для дополнительной информации.</p>
 					</div>
 				</div>
@@ -340,7 +340,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Мы не можем предоставить расчетное время выпуска новой версии, но мы усердно работаем над разработкой приложения и новых функций!</p>
 					</div>
 				</div>
@@ -358,7 +358,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>На данный момент да. Но отключение SIP перестанет быть необходимым в будущих версиях. Это безопасно, особенно на Mac M1.</p>
 					</div>
 				</div>
@@ -376,7 +376,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Нажмите клавишу option на клавиатуре во время игры, чтобы включить курсор, затем нажмите на иконку сверху слева (рядом с картой) и выберите настройки.</p>
 					</div>
 				</div>
@@ -394,7 +394,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Чтобы добавить кнопки мыши, выберите кнопку и нажмите Shift+L или R (клавиши L и R на клавиатуре, а не кнопки мыши).</p>
 					</div>
 				</div>
@@ -412,7 +412,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<ul class="list-outside list-disc">
 							<li>Нажмите CTRL + M в режиме назначения клавиш и поместите кнопку в центре экрана.</li>
 							<li>Попробуйте отключить и заново подключить мышь, если используете подключаемую мышь.</li>
@@ -433,7 +433,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Проверьте, переместили ли вы игру в папку Программы после установки. Если да, удалите ее и переустановите. Оставьте ее в папке Документы.</p>
 					</div>
 				</div>
@@ -451,7 +451,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Вам необходимо установить XCode из App Store.</p>
 					</div>
 				</div>
@@ -469,7 +469,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Да, для применения новых изменений в программе вам нужно заново установить .ipa, однако вам не потребуется загружать данные игры, так как просто будет заменена старая пропатченная версия.</p>
 					</div>
 				</div>
@@ -487,7 +487,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Запустив следующую команду:</p>
 						<br />
 						<div class="inline-block max-w-[100%] overflow-auto bg-gray-700 dark:bg-gray-800 transition duration-200 ease-in-out my-3 p-3 rounded"><code class="text-yellow-400">sudo nvram boot-args=""</code></div>
@@ -507,7 +507,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Это режим подробного протоколирования, он показывает, что происходит в системе. Он был включен следующей командой:</p>
 						<div class="inline-block max-w-[100%] overflow-auto bg-gray-700 dark:bg-gray-800 transition duration-200 ease-in-out my-3 p-3 rounded"><code class="text-yellow-400">sudo nvram boot-args...</code></div>
 						<br />Вы можете отключить появление текста, запустив по порядку следующие команды:
@@ -530,7 +530,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>Это нормально. В системах *nix не пишется пароль, пока вы его печатаете. Это сделано ради безопасности и абсолютно ожидаемо. Просто введите свой пароль как обычно и нажмите Enter.</p>
 					</div>
 				</div>
@@ -548,7 +548,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>В данный момент PlayCover не поддерживает компьютеры с процессором Intel. Однако разработчики стараются это исправить, так что следите за новостями.</p>
 					</div>
 				</div>
@@ -566,7 +566,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<ol class="list-decimal">
 							<li>Проверьте, что вы отключили SIP.</li>
 							<li>
@@ -600,7 +600,7 @@
 					</div>
 
 					<!-- answer -->
-					<div class="answer hidden w-[75%] xl:w-[55rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
+					<div class="answer hidden px-8 w-[83vw] xl:w-[63rem] font-medium text-gray-700 dark:text-gray-300 transition duration-200">
 						<p>
 							Вы можете:<br />
 							<br />
