--- a/lang/cn/faq/index.html
+++ b/lang/cn/faq/index.html
@@ -6,9 +6,9 @@
 		<meta name="description" content="Run iOS apps & games in fullscreen mode with mouse, keyboard & controller support." />
 		<meta name="keywords" content="Play Cover, Play Cover download, Play Cover changelog, Play Cover donate, Play Cover team, Play Cover mac, Play Cover intel mac, Play Cover faq, Play Cover contact, Play Cover copyright, Play Cover legal notice, Play Cover PlayPass, PlayPass" />
 		<title>常见问题解答 | PlayCover </title>
-		<link href="/css/styles.css" rel="stylesheet" />
-		<link rel="shortcut icon" type="image/jpg" href="/assets/favicon.ico" />
-		<script src="/js/local-storage-track.js"></script>
+		<link href="/static/css/styles.css" rel="stylesheet" />
+		<link rel="shortcut icon" type="image/jpg" href="/static/assets/favicon.ico" />
+		<script src="/static/js/local-storage-track.js"></script>
 
 		<!-- fonts import -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -24,7 +24,7 @@
 				<!-- logo -->
 				<div class="flex items-center lg:mr-10 space-x-10">
 					<a href="/lang/cn" class="flex items-center">
-						<img class="h-14 md:h-16 w-14 md:w-16 rounded-lg" src="/assets/logo.png" alt="PlayCover logo" />
+						<img class="h-14 md:h-16 w-14 md:w-16 rounded-lg" src="/static/assets/logo.png" alt="PlayCover logo" />
 					</a>
 					<!-- primary nav -->
 					<div class="hidden xl:flex items-center space-x-5 pt-1 text-[1.05rem] font-semibold text-center">
@@ -751,16 +751,16 @@
 		<div class="hidden rotate-180 dark:shadow border-transparent dark:border-transparent bg-gray-300 dark:bg-[#222222] animate-bounce animate-pulse dark:border-pastel-pink"></div>
 
 		<!-- js -->
-		<script src="/js/faq-search.js"></script>
-		<script src="/js/load-transitions.js"></script>
-		<script src="/js/language-button.js"></script>
-		<script src="/js/download-link.js" type="module"></script>
-		<script src="/js/mobile-buttons.js"></script>
-		<script src="/js/dark-mode.js"></script>
-		<script src="/js/scroll-animations.js"></script>
-		<script src="/js/question-activator.js"></script>
-		<script src="/js/donate-popup.js"></script>
-		<script src="/js/contact-popup.js"></script>
-		<script src="/js/auto-closer.js"></script>
+		<script src="/static/js/faq-search.js"></script>
+		<script src="/static/js/load-transitions.js"></script>
+		<script src="/static/js/language-button.js"></script>
+		<script src="/static/js/download-link.js" type="module"></script>
+		<script src="/static/js/mobile-buttons.js"></script>
+		<script src="/static/js/dark-mode.js"></script>
+		<script src="/static/js/scroll-animations.js"></script>
+		<script src="/static/js/question-activator.js"></script>
+		<script src="/static/js/donate-popup.js"></script>
+		<script src="/static/js/contact-popup.js"></script>
+		<script src="/static/js/auto-closer.js"></script>
 	</body>
 </html>
